--- a/owncloudApp/src/main/res/values-lb/strings.xml
+++ b/owncloudApp/src/main/res/values-lb/strings.xml
@@ -84,16 +84,16 @@
   <string name="common_cancel_sync">Synchronisatioun ofbriechen</string>
     <string name="common_back">Zeréck</string>
   <string name="common_error">Feeler</string>
-  <string name="common_loading">Et gëtt gelueden ...</string>
+  <string name="common_loading">Et gëtt gelueden …</string>
   <string name="common_unknown">Onbekannt</string>
   <string name="common_error_unknown">Onbekannte Feeler</string>
   <string name="about_title">Iwwer</string>
   <string name="change_password">Passwuert änneren</string>
   <string name="delete_account">De Kont läschen</string>
   <string name="create_account">Kont uleeën</string>
-  <string name="upload_chooser_title">Eropluede vun ... </string>
+  <string name="upload_chooser_title">Eropluede vun … </string>
   <string name="uploader_info_dirname">Dossiersnumm:</string>
-  <string name="uploader_upload_in_progress_ticker">Lueden erop ...</string>
+  <string name="uploader_upload_in_progress_ticker">Lueden erop …</string>
   <string name="uploader_upload_in_progress_content">%1$d%% eroplueden %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Eroplueden ofgeschloss</string>
   <string name="uploader_upload_succeeded_content_single">%1$s eropgelueden</string>
@@ -168,8 +168,8 @@
   <string name="media_rewind_description">Zréckspull-Knäppchen</string>
   <string name="media_play_pause_description">Ofspill- oder Paus-Knäppchen</string>
   <string name="media_forward_description">Virspull-Knäppche</string>
-  <string name="auth_getting_authorization">Authoriséierung kréien ...</string>
-  <string name="auth_trying_to_login">Versuch fir sech anzeloggen ...</string>
+  <string name="auth_getting_authorization">Authoriséierung kréien …</string>
+  <string name="auth_trying_to_login">Versuch fir sech anzeloggen …</string>
   <string name="auth_no_net_conn_title">Keng Netzwierkconnectioun</string>
   <string name="auth_nossl_plain_ok_title">Keng geséchert Connectioun disponibel.</string>
   <string name="auth_connection_established">Connectioun hiergestallt</string>
@@ -292,7 +292,7 @@
   <string name="actionbar_logger">Protokoller</string>
   <string name="log_send_history_button">Historique schécken</string>
   <string name="log_send_mail_subject">Protokoller vun der %1$s-Android-App</string>
-  <string name="log_progress_dialog_text">Donnée gi gelueden ...</string>
+  <string name="log_progress_dialog_text">Donnée gi gelueden …</string>
     <string name="actionbar_move">Réckelen</string>
   <string name="file_list_empty_moving">Hei ass näischt. Setz en Dossier dobäi!</string>
   <string name="folder_picker_choose_button_text">Auswielen</string>
@@ -323,8 +323,8 @@
   <string name="file_list__footer__files">%1$d Fichieren</string>
   <string name="file_list__footer__files_and_folder">1 Fichier, %1$d Dossieren</string>
   <string name="file_list__footer__files_and_folders">%1$d Fichieren, %2$d Dossieren</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">Den original Fichier gëtt ...</string>
-  <string name="prefs_camera_upload_behaviour_title">Den original Fichier gëtt ...</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">Den original Fichier gëtt …</string>
+  <string name="prefs_camera_upload_behaviour_title">Den original Fichier gëtt …</string>
   <string name="upload_copy_files">Fichier kopéieren</string>
   <string name="upload_move_files">Fichier réckelen</string>
   <string name="pref_behaviour_entries_keep_file">Am original Dossier gehalen</string>
