--- a/owncloudApp/src/main/res/values-oc/strings.xml
+++ b/owncloudApp/src/main/res/values-oc/strings.xml
@@ -67,7 +67,7 @@ Telecargatz-lo aicí : %2$s</string>
   <string name="uploader_error_message_source_file_not_copied">Una error s\'es produita al moment de la còpia d\'aqueste fichièr dens un dorsièr temporari. Perfavor assajatz un aut cop.</string>
   <string name="file_list_seconds_ago">i a qualques segondas</string>
   <string name="file_list_empty">I a pas res aicí ! Mandatz doncas quicòm :)</string>
-  <string name="file_list_loading">Cargament...</string>
+  <string name="file_list_loading">Cargament…</string>
   <string name="local_file_list_empty">Cap de fichièr es pas present dins aqueste dorsièr.</string>
   <string name="local_file_list_empty_just_folders">I a pas de dorsièrs dins aqueste dorsièr.</string>
   <string name="upload_list_empty">Cap de mandadís pas disponible.</string>
@@ -182,8 +182,8 @@ En rason d\'aquesta modificacion, totes los fichièrs mandats amb de versions an
   <string name="media_rewind_description">Boton de rembobinatge</string>
   <string name="media_play_pause_description">Boton de lectura o de pausa</string>
   <string name="media_forward_description">Boton d\'avança rapida</string>
-  <string name="auth_getting_authorization">Contraròtle d\'autorizacion...</string>
-  <string name="auth_trying_to_login">Temptativa de connexion...</string>
+  <string name="auth_getting_authorization">Contraròtle d\'autorizacion…</string>
+  <string name="auth_trying_to_login">Temptativa de connexion…</string>
   <string name="auth_no_net_conn_title">Pas de connexion ret</string>
   <string name="auth_nossl_plain_ok_title">Connexion securizada pas disponibla</string>
   <string name="auth_connection_established">Connexion establida</string>
@@ -294,7 +294,7 @@ En rason d\'aquesta modificacion, totes los fichièrs mandats amb de versions an
   <string name="actionbar_logger">Jornals</string>
   <string name="log_send_history_button">Mandar l\'istoric</string>
   <string name="log_send_mail_subject">Jornals de l\'aplicacion Android %1$s</string>
-  <string name="log_progress_dialog_text">Cargament de las donadas...</string>
+  <string name="log_progress_dialog_text">Cargament de las donadas…</string>
     <string name="actionbar_move">Desplaçar</string>
   <string name="file_list_empty_moving">I a pas res aicí. Podètz apondre un dorsièr !</string>
   <string name="folder_picker_choose_button_text">Causir</string>
@@ -328,8 +328,8 @@ En rason d\'aquesta modificacion, totes los fichièrs mandats amb de versions an
   <string name="prefs_camera_upload_source_path_title">Dorsièr de l\'aparelh fòto (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">Requesit</string>
   <string name="prefs_camera_upload_source_path_title_optional">Opcional</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">Lo fichièr original serà...</string>
-  <string name="prefs_camera_upload_behaviour_title">Lo fichièr original serà...</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">Lo fichièr original serà…</string>
+  <string name="prefs_camera_upload_behaviour_title">Lo fichièr original serà…</string>
   <string name="upload_copy_files">Copiar lo fichièr</string>
   <string name="upload_move_files">Desplaçar lo fichièr</string>
   <string name="pref_behaviour_entries_keep_file">gardat dins lo dorsièr original</string>
@@ -344,7 +344,7 @@ En rason d\'aquesta modificacion, totes los fichièrs mandats amb de versions an
   <string name="share_via_link_password_label">Senhal</string>
   <string name="share_via_link_password_title">Securizat</string>
   <string name="share_get_public_link_button">Obténer lo ligam</string>
-  <string name="share_with_title">Partejar amb...</string>
+  <string name="share_with_title">Partejar amb…</string>
   <string name="share_with_edit_title">Partejar amb %1$s</string>
   <string name="share_search">Recercar</string>
   <string name="search_users_and_groups_hint">Recercar d\'utilizaires e de gropes</string>
