--- a/owncloudApp/src/main/res/values-az/strings.xml
+++ b/owncloudApp/src/main/res/values-az/strings.xml
@@ -57,15 +57,15 @@
   <string name="common_yes">Bəli</string>
   <string name="common_no">Xeyir</string>
     <string name="common_error">Səhv</string>
-  <string name="common_loading">Yüklənir...</string>
+  <string name="common_loading">Yüklənir…</string>
   <string name="common_error_unknown">Bəlli olmayan səhv baş verdi</string>
   <string name="common_pending">Gözləmə</string>
   <string name="about_title">Haqqında</string>
   <string name="change_password">Şifrəni dəyiş</string>
   <string name="create_account">Hesab yarat</string>
-  <string name="upload_chooser_title">Burdan yüklə ...</string>
+  <string name="upload_chooser_title">Burdan yüklə …</string>
   <string name="uploader_info_dirname">Qovluq adı</string>
-  <string name="uploader_upload_in_progress_ticker">Yüklənmə gedir ...</string>
+  <string name="uploader_upload_in_progress_ticker">Yüklənmə gedir …</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Yüklənmə gedir %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Uğurla yükləndi</string>
   <string name="uploader_upload_failed_ticker">Yüklənmədə səhv baş verdi</string>
@@ -73,7 +73,7 @@
   <string name="uploads_view_group_current_uploads">Mövcud</string>
   <string name="uploads_view_upload_status_succeeded">Bitmişdir</string>
   <string name="uploads_view_upload_status_unknown_fail">Bəlli olmayan səhv baş verdi</string>
-  <string name="downloader_download_in_progress_ticker">Endirilir ...</string>
+  <string name="downloader_download_in_progress_ticker">Endirilir …</string>
   <string name="downloader_download_in_progress_content">%1$d%% Endirilir %2$s</string>
   <string name="downloader_download_succeeded_ticker">Endirim uğurla bitdi</string>
   <string name="downloader_download_failed_ticker">Endirim olmadı</string>
@@ -157,7 +157,7 @@ Aşağıda göstərilən %5$s-də olan daxili və xarici fayl(lar) link edilmiş
   <string name="wait_a_moment">Biraz gözləyin</string>
   <string name="filedisplay_unexpected_bad_get_content">Naməlum problem; xahiş olunur faylı fərqli program təminatından seçəsiniz</string>
   <string name="filedisplay_no_file_selected">Heç bir fayl seçilməyib</string>
-  <string name="activity_chooser_title">Linki yollayın ...</string>
+  <string name="activity_chooser_title">Linki yollayın …</string>
   <string name="oauth_check_onoff">oAuth2 ilə qeydiyyatdan keçin</string>
   <string name="ssl_validator_reason_cert_not_trusted">Server sertifikati inamlı deyil</string>
   <string name="ssl_validator_reason_cert_expired">- Server sertifikatının vaxtı bitmişdir</string>
