--- a/owncloudApp/src/main/res/values-cy-rGB/strings.xml
+++ b/owncloudApp/src/main/res/values-cy-rGB/strings.xml
@@ -35,13 +35,13 @@
   <string name="common_pending">I ddod</string>
   <string name="about_title">Ynglyn â</string>
   <string name="create_account">Creu cyfrif</string>
-  <string name="upload_chooser_title">Llwytho i fyny o ...</string>
-  <string name="uploader_upload_in_progress_ticker">Yn llwytho i fyny ...</string>
+  <string name="upload_chooser_title">Llwytho i fyny o …</string>
+  <string name="uploader_upload_in_progress_ticker">Yn llwytho i fyny …</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Llwytho i fyny %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Llwytho i fyny\'n llwyddiannus</string>
   <string name="uploader_upload_failed_ticker">Methwyd llwytho i fyny</string>
   <string name="uploader_upload_failed_content_single">Methwyd cwblhau llwytho %1$s i fyny</string>
-  <string name="downloader_download_in_progress_ticker">Llwytho i lawr ...</string>
+  <string name="downloader_download_in_progress_ticker">Llwytho i lawr …</string>
   <string name="downloader_download_in_progress_content">%1$d%% Llwytho i lawr %2$s</string>
   <string name="downloader_download_succeeded_ticker">Llwyddiant llwytho i lawr</string>
   <string name="downloader_download_failed_ticker">Methwyd llwytho i lawr</string>
