--- a/owncloudApp/src/main/res/values-de-rAT/strings.xml
+++ b/owncloudApp/src/main/res/values-de-rAT/strings.xml
@@ -20,7 +20,7 @@
   <string name="prefs_feedback">Rückmeldung</string>
   <string name="recommend_subject">Versuch %1$s auf deinem Handy!</string>
   <string name="recommend_text">Ich lade dich ein %1$s auf deinem Handy zu verwenden!\nDownloade es hier: %2$s</string>
-  <string name="auth_host_url">Server Adresse https://...</string>
+  <string name="auth_host_url">Server Adresse https://…</string>
   <string name="auth_username">Benutzername</string>
   <string name="auth_password">Passwort</string>
   <string name="auth_register">Neu bei %1$s?</string>
@@ -47,20 +47,20 @@
   <string name="common_no">Nein</string>
     <string name="common_back">Zurück</string>
   <string name="common_error">Fehler</string>
-  <string name="common_loading">Lade ...</string>
+  <string name="common_loading">Lade …</string>
   <string name="common_error_unknown">Unbekannter Fehler</string>
   <string name="about_title">Über</string>
   <string name="change_password">Passwort ändern</string>
   <string name="create_account">Konto erstellen</string>
-  <string name="upload_chooser_title">Hochladen von ...</string>
+  <string name="upload_chooser_title">Hochladen von …</string>
   <string name="uploader_info_dirname">Ordner Name</string>
-  <string name="uploader_upload_in_progress_ticker">Lade hoch ...</string>
+  <string name="uploader_upload_in_progress_ticker">Lade hoch …</string>
   <string name="uploader_upload_succeeded_ticker">Hochladen erfolgreich</string>
   <string name="uploader_upload_failed_ticker">Hochladen fehlgeschlagen</string>
   <string name="uploader_upload_failed_content_single">Hochladen von %1$s konnte nicht fertig gestellt werden</string>
   <string name="uploads_view_upload_status_cancelled">Abgebrochen</string>
   <string name="uploads_view_upload_status_unknown_fail">Unbekannter Fehler</string>
-  <string name="downloader_download_in_progress_ticker">Lade herunter ...</string>
+  <string name="downloader_download_in_progress_ticker">Lade herunter …</string>
   <string name="downloader_download_succeeded_ticker">Herunterladen erfolgreich</string>
   <string name="downloader_download_failed_ticker">Herunterladen fehlgeschlagen</string>
   <string name="downloader_download_failed_content">Herunterladen von %1$s konnte nicht fertig gestellt werden</string>
