--- a/owncloudApp/src/main/res/values-de-rDE/strings.xml
+++ b/owncloudApp/src/main/res/values-de-rDE/strings.xml
@@ -141,9 +141,9 @@
   <string name="change_password">Passwort ändern</string>
   <string name="delete_account">Benutzerkonto löschen</string>
   <string name="create_account">Account erstellen</string>
-  <string name="upload_chooser_title">Dateien hochladen von...</string>
+  <string name="upload_chooser_title">Dateien hochladen von…</string>
   <string name="uploader_info_dirname">Ordnername</string>
-  <string name="uploader_upload_in_progress_ticker">Hochladen...</string>
+  <string name="uploader_upload_in_progress_ticker">Hochladen…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Hochladen %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Hochladen erfolgreich</string>
   <string name="uploader_upload_succeeded_content_single">%1$s wurde/n erfolgreich hochgeladen</string>
@@ -182,7 +182,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Warte auf die drahtlose Verbindung</string>
   <string name="uploads_view_later_waiting_to_upload">Warten auf das Hochladen</string>
   <string name="uploads_view_unsupported_media_type">Nicht unterstützter Medientyp</string>
-  <string name="downloader_download_in_progress_ticker">Herunterladen...</string>
+  <string name="downloader_download_in_progress_ticker">Herunterladen…</string>
   <string name="downloader_download_in_progress_content">%1$d%% Herunterladen %2$s</string>
   <string name="downloader_download_succeeded_ticker">Herunterladen erfolgreich</string>
   <string name="downloader_download_succeeded_content">%1$s wurde erfolgreich heruntergeladen</string>
@@ -247,7 +247,7 @@
   <string name="media_forward_description">Vorspulen Button</string>
   <string name="upload_from_camera_title">Kamerabild</string>
   <string name="auth_getting_authorization">Legitimierung empfangen …</string>
-  <string name="auth_trying_to_login">Anmeldeversuch...</string>
+  <string name="auth_trying_to_login">Anmeldeversuch…</string>
   <string name="auth_no_net_conn_title">Keine Netzwerkverbindung</string>
   <string name="auth_nossl_plain_ok_title">Sichere Verbindung nicht verfügbar.</string>
   <string name="auth_connection_established">Verbindung hergestellt</string>
@@ -304,7 +304,7 @@
   <string name="activity_chooser_title">Link senden an …</string>
   <string name="wait_for_tmp_copy_from_private_storage">Kopiere Datei vom privatem Speicher</string>
   <string name="oauth_check_onoff">Anmelden mit oAuth2</string>
-  <string name="oauth_login_connection">Verbinde mit dem OAuth2-Server...</string>
+  <string name="oauth_login_connection">Verbinde mit dem OAuth2-Server…</string>
   <string name="ssl_validator_header">Die Identität des Servers konnte nicht verifiziert werden</string>
   <string name="ssl_validator_reason_cert_not_trusted">- Das Zertifikat des Servers ist nicht vertrauenswürdig</string>
   <string name="ssl_validator_reason_cert_expired">- Das Zertifikat des Servers ist abgelaufen</string>
@@ -432,8 +432,8 @@
   <string name="prefs_camera_upload_source_path_title">Kamera-Ordner (%1$s)</string>
   <string name="prefs_camera_upload_source_path_title_required">Benötigt</string>
   <string name="prefs_camera_upload_source_path_title_optional">Optional</string>
-  <string name="prefs_camera_upload_behaviour_dialogTitle">Originaldatei wird...</string>
-  <string name="prefs_camera_upload_behaviour_title">Originaldatei wird...</string>
+  <string name="prefs_camera_upload_behaviour_dialogTitle">Originaldatei wird…</string>
+  <string name="prefs_camera_upload_behaviour_title">Originaldatei wird…</string>
   <string name="upload_copy_files">Datei kopieren</string>
   <string name="upload_move_files">Datei verschieben</string>
   <string name="pref_behaviour_entries_keep_file">im Originalordner behalten</string>
