--- a/owncloudApp/src/main/res/values-el/strings.xml
+++ b/owncloudApp/src/main/res/values-el/strings.xml
@@ -103,7 +103,7 @@
   <string name="file_list_seconds_ago">δευτερόλεπτα πριν</string>
   <string name="file_list_empty">Δεν υπάρχει τίποτα εδώ. Μεταφορτώστε κάτι!</string>
   <string name="file_list_empty_available_offline">Δεν υπάρχουν διαθέσιμα αρχεία εκτός σύνδεση.</string>
-  <string name="file_list_loading">Γίνεται φόρτωση...</string>
+  <string name="file_list_loading">Γίνεται φόρτωση…</string>
   <string name="file_list_no_app_for_file_type">Δεν βρέθηκε καμία εφαρμογή για τύπο αρχείου</string>
   <string name="local_file_list_empty">Δεν υπάρχουν αρχεία σε αυτό τον φάκελο.</string>
   <string name="local_file_list_empty_just_folders">Δεν υπάρχουν άλλοι φάκελοι μέσα σε αυτόν τον φάκελο.</string>
@@ -133,7 +133,7 @@
   <string name="common_back">Πίσω</string>
   <string name="common_save_exit">Αποθήκευση &amp; έξοδος</string>
   <string name="common_error">Σφάλμα</string>
-  <string name="common_loading">Γίνεται φόρτωση...</string>
+  <string name="common_loading">Γίνεται φόρτωση…</string>
   <string name="common_unknown">άγνωστο</string>
   <string name="common_error_unknown">Άγνωστο σφάλμα</string>
   <string name="common_pending">Εκκρεμεί</string>
@@ -248,7 +248,7 @@
   <string name="media_play_pause_description">Κουμπί αναπαραγωγής ή παύσης</string>
   <string name="media_forward_description">Κουμπί προώθησης</string>
   <string name="upload_from_camera_title">Φωτογραφία από την κάμερα</string>
-  <string name="auth_getting_authorization">Λήψη πιστοποίησης...</string>
+  <string name="auth_getting_authorization">Λήψη πιστοποίησης…</string>
   <string name="auth_trying_to_login">Προσπάθεια εισόδου…</string>
   <string name="auth_no_net_conn_title">Δεν υπάρχει σύνδεση στο δίκτυο</string>
   <string name="auth_nossl_plain_ok_title">Μη διαθέσιμη ασφαλής σύνδεση.</string>
@@ -306,7 +306,7 @@
   <string name="activity_chooser_title">Αποστολή συνδέσμου σε</string>
   <string name="wait_for_tmp_copy_from_private_storage">Αντιγραφή αρχείου από ιδιωτικό αποθηκευτικό χώρο</string>
   <string name="oauth_check_onoff">Σύνδεση με oAuth2</string>
-  <string name="oauth_login_connection">Γίνεται σύνδεση με τον διακομιστή OAuth2...</string>
+  <string name="oauth_login_connection">Γίνεται σύνδεση με τον διακομιστή OAuth2…</string>
   <string name="ssl_validator_header">Δεν ήταν δυνατή η επαλήθευση της ταυτότητας του διακομιστή</string>
   <string name="ssl_validator_reason_cert_not_trusted">- Το πιστοποιητικό του διακομιστή δεν είναι έμπιστο</string>
   <string name="ssl_validator_reason_cert_expired">- Το πιστοποιητικό του διακομιστή έχει λήξει</string>
