--- a/owncloudApp/src/main/res/values-es-rAR/strings.xml
+++ b/owncloudApp/src/main/res/values-es-rAR/strings.xml
@@ -82,7 +82,7 @@
   <string name="auth_oauth_failure">El tóken de acceso ha expirado o se ha vuelto inválido. Ingresa nuevamente para conseguir el acceso</string>
   <string name="auth_oauth_failure_snackbar_action">Entrar</string>
   <string name="auth_check_server">Verificar servidor</string>
-  <string name="auth_host_url">Dirección del servidor https://...</string>
+  <string name="auth_host_url">Dirección del servidor https://…</string>
   <string name="auth_username">Nombre de usuario</string>
   <string name="auth_password">Contraseña</string>
   <string name="auth_register">¿Sos nuevo para %1$s?</string>
@@ -104,7 +104,7 @@
   <string name="file_list_seconds_ago">segundos atrás</string>
   <string name="file_list_empty">No hay nada. ¡Subí contenido!</string>
   <string name="file_list_empty_available_offline">No hay archivos disponibles sin conexión.</string>
-  <string name="file_list_loading">Cargando...</string>
+  <string name="file_list_loading">Cargando…</string>
   <string name="file_list_no_app_for_file_type">No se ha encontrado una aplicación para este tipo de archivo</string>
   <string name="local_file_list_empty">No existen archivos en esta carpeta.</string>
   <string name="local_file_list_empty_just_folders">No hay subcarpetas en esta carpeta.</string>
@@ -134,7 +134,7 @@
   <string name="common_back">Volver</string>
   <string name="common_save_exit">Guardar &amp; Salir</string>
   <string name="common_error">Error</string>
-  <string name="common_loading">Cargando...</string>
+  <string name="common_loading">Cargando…</string>
   <string name="common_unknown">desconocido</string>
   <string name="common_error_unknown">Error desconocido</string>
   <string name="common_pending">Pendientes</string>
@@ -145,7 +145,7 @@
   <string name="create_account">Crear cuenta</string>
   <string name="upload_chooser_title">Subir desde</string>
   <string name="uploader_info_dirname">Nombre de la carpeta</string>
-  <string name="uploader_upload_in_progress_ticker">Subiendo...</string>
+  <string name="uploader_upload_in_progress_ticker">Subiendo…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Subiendo %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Subido con éxito</string>
   <string name="uploader_upload_succeeded_content_single">%1$s cargado</string>
@@ -184,7 +184,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Esperando conectividad WiFi</string>
   <string name="uploads_view_later_waiting_to_upload">Esperando para cargar</string>
   <string name="uploads_view_unsupported_media_type">Archivo de medios no soportado</string>
-  <string name="downloader_download_in_progress_ticker">Descargando...</string>
+  <string name="downloader_download_in_progress_ticker">Descargando…</string>
   <string name="downloader_download_in_progress_content">%1$d%%  descargando %2$s</string>
   <string name="downloader_download_succeeded_ticker">Descarga completa</string>
   <string name="downloader_download_succeeded_content">%1$s descargado</string>
@@ -248,8 +248,8 @@
   <string name="media_play_pause_description">Botón de reproducción o pausa </string>
   <string name="media_forward_description">Botón avance rápido</string>
   <string name="upload_from_camera_title">Imagen desde la cámara</string>
-  <string name="auth_getting_authorization">Obteniendo autorización...</string>
-  <string name="auth_trying_to_login">Intentando identificar...</string>
+  <string name="auth_getting_authorization">Obteniendo autorización…</string>
+  <string name="auth_trying_to_login">Intentando identificar…</string>
   <string name="auth_no_net_conn_title">Sin conexión de red</string>
   <string name="auth_nossl_plain_ok_title">Conexión segura no disponible.</string>
   <string name="auth_connection_established">Conexión establecida</string>
@@ -270,7 +270,7 @@
   <string name="auth_wtf_reenter_URL">Estado inesperado; por favor ingrese nuevamente la dirección del servidor</string>
   <string name="auth_expired_oauth_token_toast">Tu autorización ha expirado. Por favor, obtenga una nueva autorización</string>
   <string name="auth_expired_basic_auth_toast">Por favor ingrese su contraseña actual</string>
-  <string name="auth_connecting_auth_server">Conectando al servidor de autenticación ...</string>
+  <string name="auth_connecting_auth_server">Conectando al servidor de autenticación …</string>
   <string name="auth_unsupported_auth_method">El servidor no soporta este método de autenticación</string>
   <string name="auth_unsupported_multiaccount">%1$s no soporta múltiples cuentas</string>
   <string name="auth_fail_get_user_name">Tú servidor no esta regresando una identificación de usuario correcta, por favor contacta a un administrador</string>
@@ -393,7 +393,7 @@
   <string name="log_send_history_button">Enviar historial</string>
   <string name="log_send_no_mail_app">No se ha encontrado una aplicación para enviar los registros. Por favor instale una aplicación de correo.</string>
   <string name="log_send_mail_subject">%1$s Registros de la aplicación Android</string>
-  <string name="log_progress_dialog_text">Cargando datos...</string>
+  <string name="log_progress_dialog_text">Cargando datos…</string>
   <string name="actionbar_select_all">Seleccionar todos</string>
   <string name="actionbar_select_inverse">Invertir selección</string>
   <string name="actionbar_move">Mover</string>
