--- a/owncloudApp/src/main/res/values-es-rCL/strings.xml
+++ b/owncloudApp/src/main/res/values-es-rCL/strings.xml
@@ -11,7 +11,7 @@
   <string name="prefs_category_general">General</string>
   <string name="prefs_accounts">Cuentas</string>
   <string name="prefs_help">Ayuda</string>
-  <string name="auth_host_url">Dirección del servidor https://...</string>
+  <string name="auth_host_url">Dirección del servidor https://…</string>
   <string name="auth_username">Usuario</string>
   <string name="auth_password">Clave</string>
   <string name="auth_register">¿Nuevo en %1$s?</string>
@@ -33,11 +33,11 @@
   <string name="common_yes">Si</string>
   <string name="common_no">No</string>
     <string name="common_error">Error</string>
-  <string name="common_loading">Cargando ...</string>
+  <string name="common_loading">Cargando …</string>
   <string name="common_error_unknown">Error desconocido</string>
   <string name="about_title">Acerca de</string>
   <string name="create_account">Crear cuenta</string>
-  <string name="upload_chooser_title">Subir desde...</string>
+  <string name="upload_chooser_title">Subir desde…</string>
   <string name="uploader_info_dirname">Nombre del directorio</string>
   <string name="uploader_upload_in_progress_ticker">Subiendo</string>
   <string name="uploader_upload_in_progress_content"> %1$d%% Subiendo %2$s</string>
@@ -45,7 +45,7 @@
   <string name="uploader_upload_failed_ticker">Subida fallida</string>
   <string name="uploader_upload_failed_content_single">La subida de %1$s no pudo ser completada</string>
   <string name="uploads_view_upload_status_unknown_fail">Error desconocido</string>
-  <string name="downloader_download_in_progress_ticker">Descargando...</string>
+  <string name="downloader_download_in_progress_ticker">Descargando…</string>
   <string name="downloader_download_in_progress_content">%1$d%% Descargando %2$s</string>
   <string name="downloader_download_succeeded_ticker">Descarga completada</string>
   <string name="downloader_download_failed_ticker">Descarga fallida</string>
