--- a/owncloudApp/src/main/res/values-es/strings.xml
+++ b/owncloudApp/src/main/res/values-es/strings.xml
@@ -102,7 +102,7 @@
   <string name="file_list_seconds_ago">hace segundos</string>
   <string name="file_list_empty">No hay nada aquí. ¡Suba algo!</string>
   <string name="file_list_empty_available_offline">No hay archivos sin conexión disponibles.</string>
-  <string name="file_list_loading">Cargando...</string>
+  <string name="file_list_loading">Cargando…</string>
   <string name="file_list_no_app_for_file_type">No se han encontrado apps para ese tipo de archivos</string>
   <string name="local_file_list_empty">No hay archivos en esta carpeta.</string>
   <string name="local_file_list_empty_just_folders">No hay carpetas en esta carpeta.</string>
@@ -132,7 +132,7 @@
   <string name="common_back">Volver</string>
   <string name="common_save_exit">Guardar &amp; salir</string>
   <string name="common_error">Error</string>
-  <string name="common_loading">Cargando...</string>
+  <string name="common_loading">Cargando…</string>
   <string name="common_unknown">desconocido</string>
   <string name="common_error_unknown">Error desconocido</string>
   <string name="common_pending">Pendiente</string>
@@ -143,7 +143,7 @@
   <string name="create_account">Crear cuenta</string>
   <string name="upload_chooser_title">Subir desde</string>
   <string name="uploader_info_dirname">Nombre de la carpeta</string>
-  <string name="uploader_upload_in_progress_ticker">Subiendo...</string>
+  <string name="uploader_upload_in_progress_ticker">Subiendo…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Subiendo %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Subido con éxito</string>
   <string name="uploader_upload_succeeded_content_single">%1$s subido</string>
@@ -182,7 +182,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Esperando a la conexión wifi</string>
   <string name="uploads_view_later_waiting_to_upload">Esperando para subir</string>
   <string name="uploads_view_unsupported_media_type">Tipo de archivo no soportado</string>
-  <string name="downloader_download_in_progress_ticker">Descargando...</string>
+  <string name="downloader_download_in_progress_ticker">Descargando…</string>
   <string name="downloader_download_in_progress_content">%1$d%% Descargado de %2$s</string>
   <string name="downloader_download_succeeded_ticker">Descarga completa</string>
   <string name="downloader_download_succeeded_content">%1$s descargado</string>
@@ -246,8 +246,8 @@
   <string name="media_play_pause_description">Botón de reproducción o pausa </string>
   <string name="media_forward_description">Botón avance rápido</string>
   <string name="upload_from_camera_title">Imagen de la cámara</string>
-  <string name="auth_getting_authorization">Consiguiendo autorización...</string>
-  <string name="auth_trying_to_login">Tratando de iniciar sesión...</string>
+  <string name="auth_getting_authorization">Consiguiendo autorización…</string>
+  <string name="auth_trying_to_login">Tratando de iniciar sesión…</string>
   <string name="auth_no_net_conn_title">Sin conexión de red</string>
   <string name="auth_nossl_plain_ok_title">Conexión segura no disponible.</string>
   <string name="auth_connection_established">Conexión establecida</string>
@@ -394,7 +394,7 @@
   <string name="log_send_history_button">Mandar historial.</string>
   <string name="log_send_no_mail_app">Aplicación para enviar registros no encontrada. Por favor instale una aplicación de correo.</string>
   <string name="log_send_mail_subject">Se han encontrado %1$s logs de la app Android</string>
-  <string name="log_progress_dialog_text">Cargando datos...</string>
+  <string name="log_progress_dialog_text">Cargando datos…</string>
   <string name="actionbar_select_all">Seleccionar todo</string>
   <string name="actionbar_select_inverse">Seleccionar inverso</string>
     <string name="actionbar_move">Mover</string>
