--- a/owncloudApp/src/main/res/values-hr/strings.xml
+++ b/owncloudApp/src/main/res/values-hr/strings.xml
@@ -63,7 +63,7 @@
   <string name="uploader_error_message_source_file_not_copied">Za vrijeme kopiranja datoteke u priveremenu mapu desila se greška. Molimo probaj poslati ponovo.</string>
   <string name="file_list_seconds_ago">prije par sekundi</string>
   <string name="file_list_empty">Nema ničega u ovoj mapi. Pošalji nešto!</string>
-  <string name="file_list_loading">Učitavanje...</string>
+  <string name="file_list_loading">Učitavanje…</string>
   <string name="file_list_no_app_for_file_type">Nije nađena aplikacija za ovaj tip datoteke</string>
   <string name="local_file_list_empty">Nema datoteka u ovoj mapi</string>
   <string name="local_file_list_empty_just_folders">Nema mapa u ovoj mapi</string>
@@ -90,7 +90,7 @@
     <string name="common_back">Natrag</string>
   <string name="common_save_exit">Spremi &amp; izađi</string>
   <string name="common_error">Greška</string>
-  <string name="common_loading">Učitavanje...</string>
+  <string name="common_loading">Učitavanje…</string>
   <string name="common_unknown">nepoznato</string>
   <string name="common_error_unknown">Nepoznata pogreška</string>
   <string name="common_pending">Na čekanju</string>
