--- a/owncloudApp/src/main/res/values-hu-rHU/strings.xml
+++ b/owncloudApp/src/main/res/values-hu-rHU/strings.xml
@@ -77,7 +77,7 @@
   <string name="auth_failure_snackbar_action">Fiók módosítása</string>
   <string name="auth_oauth_failure_snackbar_action">Bejelentkezés</string>
   <string name="auth_check_server">Kiszolgáló ellenőrzése</string>
-  <string name="auth_host_url">Kiszolgálócím https://...</string>
+  <string name="auth_host_url">Kiszolgálócím https://…</string>
   <string name="auth_username">Felhasználónév</string>
   <string name="auth_password">Jelszó</string>
   <string name="auth_register">Új Önnek a(z) %1$s?</string>
@@ -140,7 +140,7 @@
   <string name="create_account">Fiók létrehozása</string>
   <string name="upload_chooser_title">Feltöltés innen</string>
   <string name="uploader_info_dirname">Mappanév</string>
-  <string name="uploader_upload_in_progress_ticker">Feltöltés...</string>
+  <string name="uploader_upload_in_progress_ticker">Feltöltés…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Feltöltés: %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Feltöltés sikeres</string>
   <string name="uploader_upload_succeeded_content_single">%1$s feltöltve </string>
@@ -242,8 +242,8 @@
   <string name="media_play_pause_description">Lejátszás vagy szüneteltetés gomb</string>
   <string name="media_forward_description">Gyors előretekerés gomb</string>
   <string name="upload_from_camera_title">Kép a kamerából</string>
-  <string name="auth_getting_authorization">Belépési adatok elérése...</string>
-  <string name="auth_trying_to_login">Bejelentkezési kísérlet...</string>
+  <string name="auth_getting_authorization">Belépési adatok elérése…</string>
+  <string name="auth_trying_to_login">Bejelentkezési kísérlet…</string>
   <string name="auth_no_net_conn_title">Nincs hálózati kapcsolat</string>
   <string name="auth_nossl_plain_ok_title">Biztonságos kapcsolat nem érhető el.</string>
   <string name="auth_connection_established">Kapcsolat létrejött</string>
@@ -384,7 +384,7 @@
   <string name="log_send_history_button">Előzmények küldése</string>
   <string name="log_send_no_mail_app">Nem található alkalmazás a naplók küldésére. Telepítsen egy levél alkalmazást.</string>
   <string name="log_send_mail_subject">%1$s Android-alkalmazások naplói</string>
-  <string name="log_progress_dialog_text">Adatok betöltése...</string>
+  <string name="log_progress_dialog_text">Adatok betöltése…</string>
   <string name="actionbar_select_all">Összes kijelölése</string>
     <string name="actionbar_move">Mozgatás</string>
   <string name="file_list_empty_moving">Itt nincs semmi! Adj hozzá egy mappát!</string>
