--- a/owncloudApp/src/main/res/values-id/strings.xml
+++ b/owncloudApp/src/main/res/values-id/strings.xml
@@ -102,7 +102,7 @@
   <string name="file_list_seconds_ago">beberapa detik yang lalu</string>
   <string name="file_list_empty">Tidak ada apa-apa di sini. Unggah sesuatu!</string>
   <string name="file_list_empty_available_offline">Tidak ada file offline yang tersedia.</string>
-  <string name="file_list_loading">Memuat...</string>
+  <string name="file_list_loading">Memuat…</string>
   <string name="file_list_no_app_for_file_type">Tidak ditemukan aplikasi untuk membaca berkas</string>
   <string name="local_file_list_empty">Tidak ada satupun berkas dalam folder ini.</string>
   <string name="local_file_list_empty_just_folders">Tidak ada folder dalam folder ini</string>
@@ -132,7 +132,7 @@
   <string name="common_back">Kembali</string>
   <string name="common_save_exit">Simpan &amp; keluar</string>
   <string name="common_error">Kesalahan</string>
-  <string name="common_loading">Memuat...</string>
+  <string name="common_loading">Memuat…</string>
   <string name="common_unknown">tidak diketahui</string>
   <string name="common_error_unknown">Kesalahan tidak diketahui</string>
   <string name="common_pending">Tertunda</string>
@@ -143,7 +143,7 @@
   <string name="create_account">Buat akun</string>
   <string name="upload_chooser_title">Unggah dari</string>
   <string name="uploader_info_dirname">Nama folder</string>
-  <string name="uploader_upload_in_progress_ticker">Mengunggah...</string>
+  <string name="uploader_upload_in_progress_ticker">Mengunggah…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Mengunggah %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Berhasil mengunggah</string>
   <string name="uploader_upload_succeeded_content_single">%1$s diunggah</string>
@@ -182,7 +182,7 @@
   <string name="uploads_view_upload_status_waiting_for_wifi">Menunggu koneksi wifi</string>
   <string name="uploads_view_later_waiting_to_upload">Menunggu unggahan</string>
   <string name="uploads_view_unsupported_media_type">Jenis media tidak didukung</string>
-  <string name="downloader_download_in_progress_ticker">Mengunduh...</string>
+  <string name="downloader_download_in_progress_ticker">Mengunduh…</string>
   <string name="downloader_download_in_progress_content">%1$d%% Mengunduh %2$s</string>
   <string name="downloader_download_succeeded_ticker">Berhasil mengunduh</string>
   <string name="downloader_download_succeeded_content">%1$s terunduh</string>
@@ -246,8 +246,8 @@
   <string name="media_play_pause_description">Tombol main dan jeda</string>
   <string name="media_forward_description">Tombol maju</string>
   <string name="upload_from_camera_title">Gambar dari kamera</string>
-  <string name="auth_getting_authorization">Mendapatkan otorisasi...</string>
-  <string name="auth_trying_to_login">Mencoba masuk...</string>
+  <string name="auth_getting_authorization">Mendapatkan otorisasi…</string>
+  <string name="auth_trying_to_login">Mencoba masuk…</string>
   <string name="auth_no_net_conn_title">Tidak ada koneksi internet</string>
   <string name="auth_nossl_plain_ok_title">Sambungan aman tidak tersedia</string>
   <string name="auth_connection_established">Sambungan dibuat</string>
@@ -268,7 +268,7 @@
   <string name="auth_wtf_reenter_URL">Kondisi tak terduga; silakan masukkan alamat penyedia lagi</string>
   <string name="auth_expired_oauth_token_toast">Otorisasi Anda telah berakhir. Silakan mengotorisasi lagi</string>
   <string name="auth_expired_basic_auth_toast">Masukkan password</string>
-  <string name="auth_connecting_auth_server">Menyambung ke penyedia otentikasi ...</string>
+  <string name="auth_connecting_auth_server">Menyambung ke penyedia otentikasi …</string>
   <string name="auth_unsupported_auth_method">Server tidak mendukung medote otentikasi ini</string>
   <string name="auth_unsupported_multiaccount">%1$s tidak mendukung banyak akun </string>
   <string name="auth_fail_get_user_name">Server Anda tidak membalas id pengguna dengan banar, Sialakn hubungi Administrator
@@ -304,7 +304,7 @@
   <string name="activity_chooser_title">Kirim tautan ke</string>
   <string name="wait_for_tmp_copy_from_private_storage">Menyalin berkas dari penyimpanan pribadi</string>
   <string name="oauth_check_onoff">Masuk dengan oAuth2</string>
-  <string name="oauth_login_connection">Menyambungkan ke server OAuth2...</string>
+  <string name="oauth_login_connection">Menyambungkan ke server OAuth2…</string>
   <string name="ssl_validator_header">Identitas server tidak dapat diverifikasi</string>
   <string name="ssl_validator_reason_cert_not_trusted">- Sertifikat server tidak terpercaya</string>
   <string name="ssl_validator_reason_cert_expired">- Sertifikat server kadaluarsa</string>
@@ -391,7 +391,7 @@
   <string name="log_send_history_button">Kirim riwayat</string>
   <string name="log_send_no_mail_app">Tidak ada aplikasi untuk mengirim log yang ditemukan. Pasang aplikasi email</string>
   <string name="log_send_mail_subject">%1$s Android apl log</string>
-  <string name="log_progress_dialog_text">Memuat data...</string>
+  <string name="log_progress_dialog_text">Memuat data…</string>
   <string name="actionbar_select_all">Pilih Semua</string>
   <string name="actionbar_select_inverse">Pilih kebalikan</string>
   <string name="actionbar_move">Pindah</string>
