--- a/owncloudApp/src/main/res/values-ka-rGE/strings.xml
+++ b/owncloudApp/src/main/res/values-ka-rGE/strings.xml
@@ -42,16 +42,16 @@
   <string name="about_title">ჩვენს შესახებ</string>
   <string name="change_password">პაროლის შეცვლა</string>
   <string name="create_account">ანგარიშის შექმნა</string>
-  <string name="upload_chooser_title">ატვირთე აქედან...</string>
+  <string name="upload_chooser_title">ატვირთე აქედან…</string>
   <string name="uploader_info_dirname">ფოლდერის სახელი</string>
-  <string name="uploader_upload_in_progress_ticker">მიმდინარეობს ატვირთვა...</string>
+  <string name="uploader_upload_in_progress_ticker">მიმდინარეობს ატვირთვა…</string>
   <string name="uploader_upload_in_progress_content">%1$d%% მიმდინარეობს ატვირთვა %2$s</string>
   <string name="uploader_upload_succeeded_ticker">ატვირთვა განხორციელდა</string>
   <string name="uploader_upload_failed_ticker">ატვირთვა ვერ განხორციელდა</string>
   <string name="uploader_upload_failed_content_single">%1$s ატვირთვა ვერ დასრულდა</string>
   <string name="uploads_view_group_finished_uploads">ატვირთულია</string>
   <string name="uploads_view_upload_status_unknown_fail">უცნობი შეცდომა</string>
-  <string name="downloader_download_in_progress_ticker">ჩამოტვირთვა...</string>
+  <string name="downloader_download_in_progress_ticker">ჩამოტვირთვა…</string>
   <string name="downloader_download_in_progress_content">%1$d%% ჩამოტვირთვა %2$s</string>
   <string name="downloader_download_succeeded_ticker">გადმოწერა დასრულდა</string>
   <string name="downloader_download_failed_ticker">ჩამოტვირთვა ვერ განხორციელდა</string>
