--- a/owncloudApp/src/main/res/values-km/strings.xml
+++ b/owncloudApp/src/main/res/values-km/strings.xml
@@ -51,13 +51,13 @@
   <string name="about_title">អំពី</string>
   <string name="change_password">ប្តូរ​ពាក្យសម្ងាត់</string>
   <string name="create_account">បង្កើតគណនី</string>
-  <string name="upload_chooser_title">ផ្ទុកឡើងពី...</string>
+  <string name="upload_chooser_title">ផ្ទុកឡើងពី…</string>
   <string name="uploader_info_dirname">ឈ្មោះ​ថត</string>
-  <string name="uploader_upload_in_progress_ticker">កំពុង​តែផ្ទុកឡើង...</string>
+  <string name="uploader_upload_in_progress_ticker">កំពុង​តែផ្ទុកឡើង…</string>
   <string name="uploader_upload_succeeded_ticker">ការផ្ទុកឡើងបាន​ជោគជ័យ</string>
   <string name="uploader_upload_failed_ticker">ការផ្ទុកឡើងបាន​បរាជ័យ</string>
   <string name="uploads_view_upload_status_unknown_fail">មិន​ស្គាល់​កំហុស</string>
-  <string name="downloader_download_in_progress_ticker">កំពុង​ធ្វើការទាញយក...</string>
+  <string name="downloader_download_in_progress_ticker">កំពុង​ធ្វើការទាញយក…</string>
   <string name="downloader_download_succeeded_ticker">ការទាញយក​បានជោគជ័យ</string>
   <string name="downloader_download_failed_ticker">ការទាញយក​បានបរាជ័យ</string>
   <string name="common_choose_account">ជ្រើស​គណនី</string>
