--- a/owncloudApp/src/main/res/values-pa/strings.xml
+++ b/owncloudApp/src/main/res/values-pa/strings.xml
@@ -70,16 +70,16 @@
     <string name="common_back">ਪਿੱਛੇ</string>
   <string name="common_save_exit">ਸੰਭਾਲੋ ਅਤੇ ਬੰਦ ਕਰੋ</string>
   <string name="common_error">ਗਲਤੀ</string>
-  <string name="common_loading">...ਲੋਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ</string>
+  <string name="common_loading">…ਲੋਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ</string>
   <string name="common_unknown">ਅਣਜਾਣ</string>
   <string name="common_error_unknown">ਅਣਜਾਣ ਗਲਤੀ</string>
   <string name="about_title">ਇਸ ਬਾਰੇ</string>
   <string name="change_password">ਪਾਸਵਰਡ ਬਦਲੋ</string>
   <string name="delete_account">ਅਕਾਊਂਟ ਹਟਾਓ</string>
   <string name="create_account">ਅਕਾਊਂਟ ਬਣਾਓ</string>
-  <string name="upload_chooser_title">... ਤੋਂ ਅੱਪਲੋਡ</string>
+  <string name="upload_chooser_title">… ਤੋਂ ਅੱਪਲੋਡ</string>
   <string name="uploader_info_dirname">ਫੋਲਡਰ ਨਾਂ</string>
-  <string name="uploader_upload_in_progress_ticker">... ਅੱਪਲੋਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ</string>
+  <string name="uploader_upload_in_progress_ticker">… ਅੱਪਲੋਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ</string>
   <string name="uploader_upload_in_progress_content">%1$d%% ਅੱਪਲੋਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ %2$s</string>
   <string name="uploader_upload_succeeded_ticker">ਅੱਪਲੋਡ ਸਫ਼ਲ ਹੈ</string>
   <string name="uploader_upload_succeeded_content_single">%1$s ਅੱਪਲੋਡਿਡ</string>
@@ -100,7 +100,7 @@
   <string name="uploads_view_upload_status_conflict">ਅਪਵਾਦ</string>
   <string name="uploads_view_upload_status_service_interrupted">ਐਪ ਬੰਦ ਕੀਤੀ ਗਈ ਸੀ</string>
   <string name="uploads_view_upload_status_unknown_fail">ਅਣਜਾਣ ਗਲਤੀ</string>
-  <string name="downloader_download_in_progress_ticker">... ਡਾਊਨਲੋਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ</string>
+  <string name="downloader_download_in_progress_ticker">… ਡਾਊਨਲੋਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ</string>
   <string name="downloader_not_downloaded_yet">ਹਾਲੇ ਡਾਊਨਲੋਡ ਨਹੀਂ</string>
   <string name="common_choose_account">ਅਕਾਊਂਟ ਚੁਣੋ</string>
   <string name="sync_fail_content_unauthorized">%1$s ਲਈ ਗਲਤ ਪਾਸਵਰਡ</string>
