--- a/owncloudApp/src/main/res/values-pl/strings.xml
+++ b/owncloudApp/src/main/res/values-pl/strings.xml
@@ -75,7 +75,7 @@
   <string name="auth_failure_snackbar_action">Zmień konto</string>
   <string name="auth_oauth_failure_snackbar_action">Zaloguj</string>
   <string name="auth_check_server">Sprawdź serwer</string>
-  <string name="auth_host_url">Adres serwera https://...</string>
+  <string name="auth_host_url">Adres serwera https://…</string>
   <string name="auth_username">Nazwa użytkownika</string>
   <string name="auth_password">Hasło</string>
   <string name="auth_register">Nowe %1$s?</string>
@@ -97,7 +97,7 @@
   <string name="file_list_seconds_ago">sekund temu</string>
   <string name="file_list_empty">Pusto. Wyślij coś!</string>
   <string name="file_list_empty_available_offline">Nie ma plików dostępnych offline.</string>
-  <string name="file_list_loading">Wczytywanie...</string>
+  <string name="file_list_loading">Wczytywanie…</string>
   <string name="file_list_no_app_for_file_type">Nie znaleziono aplikacji dla tego rodzaju pliku</string>
   <string name="local_file_list_empty">Nie ma plików w tym folderze.</string>
   <string name="local_file_list_empty_just_folders">W tym folderze nie ma żadnych folderów.</string>
@@ -127,7 +127,7 @@
   <string name="common_back">Wróć</string>
   <string name="common_save_exit">Zapisz i wyjdź</string>
   <string name="common_error">Błąd</string>
-  <string name="common_loading">Wczytywanie...</string>
+  <string name="common_loading">Wczytywanie…</string>
   <string name="common_unknown">nieznane</string>
   <string name="common_error_unknown">Nieznany błąd</string>
   <string name="common_pending">Oczekujące</string>
@@ -238,7 +238,7 @@
   <string name="media_play_pause_description">Przycisk odtwarzania / pauzowania</string>
   <string name="media_forward_description">Przycisk przewijania do przodu</string>
   <string name="upload_from_camera_title">Obraz z kamery</string>
-  <string name="auth_getting_authorization">Pobieram autoryzację...</string>
+  <string name="auth_getting_authorization">Pobieram autoryzację…</string>
   <string name="auth_no_net_conn_title">Brak połączenia sieciowego</string>
   <string name="auth_nossl_plain_ok_title">Nie można nawiązać bezpiecznego połączenia.</string>
   <string name="auth_connection_established">Połączenie nawiązane</string>
@@ -259,7 +259,7 @@
   <string name="auth_wtf_reenter_URL">Nieoczekiwany stan. Podaj ponownie adres serwera</string>
   <string name="auth_expired_oauth_token_toast">Twoja sesja wygasła. Proszę zaloguj się ponownie</string>
   <string name="auth_expired_basic_auth_toast">Podaj aktualne hasło</string>
-    <string name="auth_connecting_auth_server">Łączenie z serwerem poświadczeń...</string>
+    <string name="auth_connecting_auth_server">Łączenie z serwerem poświadczeń…</string>
   <string name="auth_unsupported_auth_method">Serwer nie obsługuje tej metody autoryzacji</string>
   <string name="auth_unsupported_multiaccount">%1$s nie wspiera wielu kont</string>
   <string name="auth_fail_get_user_name">Twój serwer nie zwraca prawidłowego id użytkownika, proszę skontaktuj się z administratorem
@@ -295,7 +295,7 @@
   <string name="activity_chooser_title">Wyślij link do</string>
   <string name="wait_for_tmp_copy_from_private_storage">Kopiowanie pliku z prywatnego zasobu</string>
   <string name="oauth_check_onoff">Loguj przez oAuth2</string>
-  <string name="oauth_login_connection">Łącze do serwera OAuth2...</string>
+  <string name="oauth_login_connection">Łącze do serwera OAuth2…</string>
   <string name="ssl_validator_header">Nie można zweryfikować serwera</string>
   <string name="ssl_validator_reason_cert_not_trusted">- Certyfikat serwera jest niezaufany</string>
   <string name="ssl_validator_reason_cert_expired">- Certyfikat serwera wygasł</string>
@@ -380,7 +380,7 @@
   <string name="log_send_history_button">Wyślij historię</string>
   <string name="log_send_no_mail_app">Brak aplikacji do wysyłania logów. Zainstaluj klienta poczty.</string>
   <string name="log_send_mail_subject">%1$s Logi aplikacji Android</string>
-  <string name="log_progress_dialog_text">Ładuję dane...</string>
+  <string name="log_progress_dialog_text">Ładuję dane…</string>
   <string name="actionbar_select_all">Wybierz wszystko</string>
   <string name="actionbar_select_inverse">Zaznacz odwrotnie</string>
     <string name="actionbar_move">Przenieś</string>
