--- a/owncloudApp/src/main/res/values-sk-rSK/strings.xml
+++ b/owncloudApp/src/main/res/values-sk-rSK/strings.xml
@@ -40,7 +40,7 @@
   <string name="prefs_remember_last_upload_location_summary">Zapamätať posledné umiestnenie pre nahranie zdieľaných súborov</string>
   <string name="recommend_subject">Skúste %1$s na vašom telefóne!</string>
   <string name="recommend_text">Chcel by som vám odporučiť %1$s na vašom smartfóne!\nSťahujte tu: %2$s</string>
-  <string name="auth_host_url">Adresa servera https://...</string>
+  <string name="auth_host_url">Adresa servera https://…</string>
   <string name="auth_username">Používateľské meno</string>
   <string name="auth_password">Heslo</string>
   <string name="auth_register">Ste nový v %1$s?</string>
@@ -55,7 +55,7 @@
   <string name="uploader_error_title_file_cannot_be_uploaded">Súbor nie je možné nahrať</string>
   <string name="file_list_seconds_ago">pred sekundami</string>
   <string name="file_list_empty">Žiadny súbor. Nahrajte niečo!</string>
-  <string name="file_list_loading">Načítavam...</string>
+  <string name="file_list_loading">Načítavam…</string>
   <string name="local_file_list_empty">V tomto priečinku nie sú žiadne súbory.</string>
   <string name="file_list_folder">priečinok</string>
   <string name="file_list_folders">priečinky</string>
@@ -76,7 +76,7 @@
   <string name="common_cancel_sync">Zrušiť synchronizáciu</string>
     <string name="common_back">Späť</string>
   <string name="common_error">Chyba</string>
-  <string name="common_loading">Načítavam...</string>
+  <string name="common_loading">Načítavam…</string>
   <string name="common_unknown">neznámy</string>
   <string name="common_error_unknown">Neznáma chyba</string>
   <string name="common_pending">Čaká</string>
@@ -84,9 +84,9 @@
   <string name="change_password">Zmeniť heslo</string>
   <string name="delete_account">Odstrániť účet</string>
   <string name="create_account">Vytvoriť účet</string>
-  <string name="upload_chooser_title">Odoslať z ...</string>
+  <string name="upload_chooser_title">Odoslať z …</string>
   <string name="uploader_info_dirname">Názov priečinka</string>
-  <string name="uploader_upload_in_progress_ticker">Odosielam ...</string>
+  <string name="uploader_upload_in_progress_ticker">Odosielam …</string>
   <string name="uploader_upload_in_progress_content">%1$d%% Odosielam %2$s</string>
   <string name="uploader_upload_succeeded_ticker">Odoslanie bolo úspešné</string>
   <string name="uploader_upload_failed_ticker">Odoslanie bolo neúspešné</string>
@@ -108,7 +108,7 @@
   <string name="uploads_view_upload_status_conflict">Konflikt</string>
   <string name="uploads_view_upload_status_unknown_fail">Neznáma chyba</string>
   <string name="uploads_view_later_waiting_to_upload">Čaká sa na nahratie</string>
-  <string name="downloader_download_in_progress_ticker">Sťahujem ...</string>
+  <string name="downloader_download_in_progress_ticker">Sťahujem …</string>
   <string name="downloader_download_in_progress_content">%1$d%% Sťahovanie %2$s</string>
   <string name="downloader_download_succeeded_ticker">Sťahovanie bolo úspešné</string>
   <string name="downloader_download_failed_ticker">Stiahnutie zlyhalo</string>
@@ -198,7 +198,7 @@
   <string name="wait_a_moment">Počkať chvíľu</string>
   <string name="filedisplay_unexpected_bad_get_content">Neočakávaný problém; skúste vybrať súbor inou aplikáciou</string>
   <string name="filedisplay_no_file_selected">Nebol vybraný súbor</string>
-  <string name="activity_chooser_title">Odošli link do ...</string>
+  <string name="activity_chooser_title">Odošli link do …</string>
   <string name="wait_for_tmp_copy_from_private_storage">Kopírovanie súboru z privátneho úložiska</string>
   <string name="oauth_check_onoff">Prihlásiť sa z oAuth2</string>
   <string name="ssl_validator_reason_cert_not_trusted">- Certifikát servera nie je overený</string>
