--- a/owncloudApp/src/main/res/values-sr-rSP/strings.xml
+++ b/owncloudApp/src/main/res/values-sr-rSP/strings.xml
@@ -22,7 +22,7 @@
   <string name="prefs_help">Pomoć</string>
   <string name="prefs_imprint">Žig</string>
   <string name="auth_check_server">Proveri server</string>
-  <string name="auth_host_url">Server adresa https://...</string>
+  <string name="auth_host_url">Server adresa https://…</string>
   <string name="auth_username">Korisničko ime</string>
   <string name="auth_password">Lozinka</string>
   <string name="sync_string_files">Fajlovi</string>
@@ -32,7 +32,7 @@
   <string name="uploader_wrn_no_account_quit_btn_text">Napusti</string>
   <string name="file_list_seconds_ago">Pre par sekundi</string>
   <string name="file_list_empty">Ovde nema ničeg. Pošaljite nešto!</string>
-  <string name="file_list_loading">Učitavanje...</string>
+  <string name="file_list_loading">Učitavanje…</string>
   <string name="file_list_folder">fascikla</string>
   <string name="file_list_folders">fascikle</string>
   <string name="file_list_file">fajl</string>
@@ -50,12 +50,12 @@
   <string name="change_password">Izmeni lozinku</string>
   <string name="create_account">Novi nalog</string>
   <string name="uploader_info_dirname">Ime fascikle</string>
-  <string name="uploader_upload_in_progress_ticker">Otpremanje...</string>
+  <string name="uploader_upload_in_progress_ticker">Otpremanje…</string>
   <string name="uploader_upload_succeeded_ticker">Uspešno otpremljeno</string>
   <string name="uploader_upload_failed_ticker">Otpremanje nije uspelo</string>
   <string name="uploads_view_group_finished_uploads">Otpremljeno</string>
   <string name="uploads_view_upload_status_unknown_fail">Nepoznata greška</string>
-  <string name="downloader_download_in_progress_ticker">Preuzimanje...</string>
+  <string name="downloader_download_in_progress_ticker">Preuzimanje…</string>
   <string name="downloader_download_succeeded_ticker">Uspešno preuzeto</string>
   <string name="downloader_download_failed_ticker">Preuzimanje nije uspelo</string>
   <string name="common_choose_account">Odaberite nalog</string>
